# haskell-wayland

./: haskell-wayland.cabal
src/Graphics/Wayland/: Scanner.chs
src/Graphics/Wayland/Scanner/: Protocol.hs
